make sure it breaks to one column on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -398,12 +398,12 @@ footer a:hover {
 }
 
 @media (--max-md) {
-    .footer {
+    .footer-container {
         flex-direction: column;
     }
 
-    .footerchild {
-        width: 100%;
+    .footer-push {
+        margin-left: 0;
     }
 
     .footerchild ul li:last-child {
